appNameHeader cleanup and (hopefully) a fix for page2 overlapping page1 on some mobiles.
The overlapping fix doesnt use vh/vw anymore, which not every device supports.

--- a/client/app/sidebar.styl
+++ b/client/app/sidebar.styl
@@ -140,6 +140,9 @@ div.sidebarProfile
 		margin-right: 6px
 		right: 0
 
+	.sidebarFooterAppNameHeader:before
+		margin-right: -2px
+
 	.sidebarFooterSettingsIcon
 		background-image: url("images/ic_action_settings.png")
 		width: 25px
