--- a/client/main.styl
+++ b/client/main.styl
@@ -38,6 +38,7 @@ img
 	pointer-events: none
 
 body
+	absolute: top left right bottom
 	overflow-x: hidden
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 	-webkit-tap-highlight-color: transparent
@@ -69,33 +70,40 @@ button.btn-trans:focus
 	border-color: white
 
 .appNameHeader
-	content: "simply"
 	color: white
+
+.appNameHeader:before
+	content: "simply"
 	roboto(100)
+	opacity: .6
 
 .appNameHeader:after
 	content: "Homework"
-	color: white
 	font-family: Arial, "Helvetica Neue", Helvetica, 'Roboto', sans-serif
 	opacity: .5
 	margin-left: 3px
 
 .appNameHeaderBig
 	@extend .largeTextOptimize
-	content: "simply"
 	color: white
-	font-family: 'Roboto', sans-serif
-	font-weight: 100
-	-webkit-font-smoothing: antialiased
 	font-size: 40px
+
+.appNameHeaderBig:before
+	roboto(100)
+	content: "simply"
 
 .appNameHeaderBig:after
 	content: "Homework"
-	color: white
 	font-family: Arial, "Helvetica Neue", Helvetica, 'Roboto', sans-serif
 	opacity: .7
-	-webkit-font-smoothing: antialiased
 	margin-left: 3px
+
+.appNameHeader.black:before,
+.appNameHeaderBig.black:before,
+.appNameHeader.black:after,
+.appNameHeaderBig.black:after {
+	color: black
+}
 
 div.cookiesContainer
 	background-color: rgba(0, 0, 0, .8)
